fix: add books nfs mount

--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -82,6 +82,13 @@ spec:
         existingClaim: calibre
         globalMounts:
           - path: /calibre
+      media:
+        type: nfs
+        server: nas.internal
+        path: /mnt/world/media
+        globalMounts:
+          path: /media/books
+          subPath: books
       cache:
         type: emptyDir
         globalMounts:
