--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
             image:
               repository: ghcr.io/vaskozl/calibre
               tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
-            command: ["calibredb add /media/tmp/prideandprejudice.epub --automerge ignore --with-library /media/books"]
+            command: ["calibredb add /media/assets/prideandprejudice.epub --automerge ignore --with-library /media/books"]
             env:
               CALIBRE_OVERRIDE_DATABASE_PATH: /config/metadata.db
         containers:
@@ -91,13 +91,6 @@ spec:
         server: nas.internal
         path: /mnt/world/media
         globalMounts:
-          path: /media/books
-          subPath: books
-      nfs-tmp:
-        type: nfs
-        server: nas.internal
-        path: /mnt/world/tmp
-        globalMounts:
-          path: /media/tmp
+          path: /media
       tmp:
         type: emptyDir
