--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -91,6 +91,6 @@ spec:
         server: nas.internal
         path: /mnt/world/media
         globalMounts:
-          path: /media
+          - path: /media
       tmp:
         type: emptyDir
