fix: needs tag too

--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -32,6 +32,7 @@ spec:
               # repository: ghcr.io/vaskozl/calibre
               # tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
               repository: ubuntu
+              tag: latest
             # args: ["--port=8080", "/media/books", "--enable-local-write"]
             command: ["sleep", "infinity"]
             # env:
