--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -29,19 +29,16 @@ spec:
         containers:
           app:
             image:
-              # repository: ghcr.io/vaskozl/calibre
-              # tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
-              repository: ubuntu
-              tag: latest
-            # args: ["--port=8080", "/media/books", "--enable-local-write"]
-            command: ["sleep", "infinity"]
-            # env:
-            #   CALIBRE_OVERRIDE_DATABASE_PATH: /config/metadata.db
-            # probes:
-            #   liveness:
-            #     enabled: true
-            #   readiness:
-            #     enabled: true
+              repository: ghcr.io/vaskozl/calibre
+              tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
+            args: ["--port=8080", "/media/books", "--enable-local-write"]
+            env:
+              CALIBRE_OVERRIDE_DATABASE_PATH: /config/metadata.db
+            probes:
+              liveness:
+                enabled: true
+              readiness:
+                enabled: true
             resources:
               requests:
                 cpu: 10m
