--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
+  - ./echo-server/ks.yaml
   - ./home-assistant/ks.yaml
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
