--- a/k8s/apps/default/thelounge/app/helmrelease.yaml
+++ b/k8s/apps/default/thelounge/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: thelounge
+  name: &app thelounge
 spec:
   interval: 30m
   chart:
@@ -48,7 +48,7 @@ spec:
                   failureThreshold: 30
                   periodSeconds: 5
             securityContext:
-              allowPrivilegeEscalation: false
+              # allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
@@ -68,7 +68,7 @@ spec:
         seccompProfile: {type: RuntimeDefault}
     service:
       app:
-        controller: thelounge
+        controller: *app
         ports:
           http:
             port: 9000
@@ -86,6 +86,6 @@ spec:
                   port: http
     persistence:
       config:
-        existingClaim: thelounge
+        existingClaim: *app
         globalMounts:
           - path: /config
