--- a/k8s/apps/default/qbittorrent/tools/resources/config.yaml
+++ b/k8s/apps/default/qbittorrent/tools/resources/config.yaml
@@ -10,7 +10,7 @@ trackers:
   - name: privatehd
     urls: ["privatehd.to"]
     required_seed_ratio: 1
-    required_seed_days: 30
+    required_seed_days: 14
   - name: cinemaz
     urls: ["cinemaz.to"]
     required_seed_ratio: 0
@@ -21,5 +21,13 @@ trackers:
     required_seed_days: 0
   - name: animetorrents
     urls: ["animetorrents.me"]
+    required_seed_ratio: 0
+    required_seed_days: 0
+  - name: hawke.uno
+    urls: ["hawke.uno"]
+    required_seed_ratio: 0
+    required_seed_days: 0
+  - name: orpheus
+    urls: ["orpheus.network"]
     required_seed_ratio: 0
     required_seed_days: 0
