feat: add other arr filters

--- a/k8s/apps/default/omegabrr/app/externalsecret.yaml
+++ b/k8s/apps/default/omegabrr/app/externalsecret.yaml
@@ -33,7 +33,16 @@ spec:
                 host: http://sonarr.default.svc.cluster.local
                 apikey: {{ .SONARR_API_KEY }}
                 filters: [2]
-                excludeAlternateTitles: true
+              - name: lidarr
+                type: lidarr
+                host: http://lidarr.default.svc.cluster.local
+                apikey: {{ .LIDARR_API_KEY }}
+                filters: [11]
+              - name: readarr
+                type: readarr
+                host: http://readarr.default.svc.cluster.local
+                apikey: {{ .READARR_API_KEY }}
+                filters: [12]
   dataFrom:
     - extract:
         key: omegabrr
