--- a/k8s/apps/default/lidarr/app/externalsecret.yaml
+++ b/k8s/apps/default/lidarr/app/externalsecret.yaml
@@ -13,13 +13,13 @@ spec:
       engineVersion: v2
       data:
         # App
-        READARR__API_KEY: "{{ .LIDARR_API_KEY }}"
-        READARR__POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
-        READARR__POSTGRES_PORT: "5432"
-        READARR__POSTGRES_USER: &dbUser "{{ .LIDARR_POSTGRES_USER }}"
-        READARR__POSTGRES_PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
-        READARR__POSTGRES_MAIN_DB: lidarr-main
-        READARR__POSTGRES_LOG_DB: lidarr-log
+        LIDARR__API_KEY: "{{ .LIDARR_API_KEY }}"
+        LIDARR__POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        LIDARR__POSTGRES_PORT: "5432"
+        LIDARR__POSTGRES_USER: &dbUser "{{ .LIDARR_POSTGRES_USER }}"
+        LIDARR__POSTGRES_PASSWORD: &dbPass "{{ .LIDARR_POSTGRES_PASSWORD }}"
+        LIDARR__POSTGRES_MAIN_DB: lidarr-main
+        LIDARR__POSTGRES_LOG_DB: lidarr-log
         # Postgres Init
         INIT_POSTGRES_DBNAME: lidarr-main lidarr-log
         INIT_POSTGRES_HOST: *dbHost
