--- a/k8s/apps/default/lidarr/app/helmrelease.yaml
+++ b/k8s/apps/default/lidarr/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
           app:
             image:
               repository: ghcr.io/vaskozl/lidarr-bin
-              tag: 2.7.1@0.4.4.2686@sha256:e43066ec0e300687fc8cabde9385f3ad6975d79c5fe9795797c2ae0bfe0320fa
+              tag: 2.7.1@sha256:de80b1f924daa42d79c6737d343749b75d990a9475d476c94990d79d9ab3a342
             env:
               LIDARR__APP__INSTANCENAME: Lidarr
               LIDARR__APP__THEME: dark
@@ -87,6 +87,13 @@ spec:
     persistence:
       config:
         existingClaim: *app
+      config-file:
+        type: secret
+        name: lidarr-secret
+        globalMounts:
+          - path: /config/config.xml
+            subPath: config.xml
+            readOnly: true
       tmp:
         type: emptyDir
       media:
