--- a/k8s/apps/default/lidarr/app/helmrelease.yaml
+++ b/k8s/apps/default/lidarr/app/helmrelease.yaml
@@ -93,6 +93,7 @@ spec:
         globalMounts:
           - path: /config/config.xml
             subPath: config.xml
+            defaultMode: 0744
       tmp:
         type: emptyDir
       media:
