--- a/k8s/apps/default/readarr/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr/app/helmrelease.yaml
@@ -95,6 +95,7 @@ spec:
         globalMounts:
           - path: /config/config.xml
             subPath: config.xml
+            defaultMode: 0744
       tmp:
         type: emptyDir
       media:
