--- a/k8s/apps/default/whisparr/app/helmrelease.yaml
+++ b/k8s/apps/default/whisparr/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
             image:
               repository: alpine
               tag: 3.20.3@sha256:1e42bbe2508154c9126d48c2b8a75420c3544343bf86fd041fb7527e017a4b4a
-              commands: ["sh", "-c", "'chown 568:568 /config/config.xml'"]
+            command: ["sh", "-c", "chown 568:568 /config/config.xml"]
           init-db:
             image:
               repository: ghcr.io/onedr0p/postgres-init
