--- a/k8s/apps/default/lidarr/app/externalsecret.yaml
+++ b/k8s/apps/default/lidarr/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
           <Config>
             <InstanceName>Lidarr</InstanceName>
             <BindAddress>*</BindAddress>
-            <SslPort>80</SslPort>
+            <Port>80</Port>
             <EnableSsl>False</EnableSsl>
             <ApiKey>{{ .LIDARR_API_KEY }}</ApiKey>
             <LogLevel>info</LogLevel>
