--- a/k8s/apps/default/whisparr/app/externalsecret.yaml
+++ b/k8s/apps/default/whisparr/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
           <Config>
             <InstanceName>Whisparr</InstanceName>
             <BindAddress>*</BindAddress>
-            <Port>80</Port>
+            <SslPort>80</SslPort>
             <EnableSsl>False</EnableSsl>
             <ApiKey>{{ .WHISPARR_API_KEY }}</ApiKey>
             <LogLevel>info</LogLevel>
