fix: whisparr container is special, needs SslPort and Port set maybe

--- a/k8s/apps/default/whisparr/app/externalsecret.yaml
+++ b/k8s/apps/default/whisparr/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
             <InstanceName>Whisparr</InstanceName>
             <BindAddress>*</BindAddress>
             <SslPort>80</SslPort>
+            <Port>80</Port>
             <EnableSsl>False</EnableSsl>
             <ApiKey>{{ .WHISPARR_API_KEY }}</ApiKey>
             <LogLevel>info</LogLevel>
