--- a/k8s/apps/default/whisparr/app/helmrelease.yaml
+++ b/k8s/apps/default/whisparr/app/helmrelease.yaml
@@ -45,8 +45,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/jfroy/whisparr-nightly
-              tag: 2.0.0@sha256:00bed07ec3bbbbad19169e632e9a9873a0f1a53590069ada05dab1938523e9b8
+              repository: ghcr.io/hotio/whisparr
+              tag: v3@sha256:f1a0da4e16b347009a685082b3da0a16f514dc0fd2f937a3d1d4ecba59141731
             env:
               WHISPARR__APP__INSTANCENAME: Whisparr
               WHISPARR__APP__THEME: dark
