--- a/k8s/apps/default/whisparr/app/helmrelease.yaml
+++ b/k8s/apps/default/whisparr/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
             image:
               repository: alpine
               tag: 3.20.3@sha256:1e42bbe2508154c9126d48c2b8a75420c3544343bf86fd041fb7527e017a4b4a
-            command: ["sh", "-c", "cp /secret/config.xml /config/config.xml && chown -R 568:568 /config && chmod -R 755 /config"]
+            command: ["sh", "-c", "cp /secret/config.xml /config/config.xml"]
           init-db:
             image:
               repository: ghcr.io/onedr0p/postgres-init
