fix: try use port 80

--- a/k8s/apps/default/whisparr/app/externalsecret.yaml
+++ b/k8s/apps/default/whisparr/app/externalsecret.yaml
@@ -16,6 +16,7 @@ spec:
           <Config>
             <InstanceName>Whisparr</InstanceName>
             <BindAddress>*</BindAddress>
+            <SslPort>80</SslPort>
             <EnableSsl>False</EnableSsl>
             <ApiKey>{{ .WHISPARR_API_KEY }}</ApiKey>
             <LogLevel>info</LogLevel>
