feat: add cross-seedable trackers

--- a/k8s/apps/default/cross-seed/app/externalsecret.yaml
+++ b/k8s/apps/default/cross-seed/app/externalsecret.yaml
@@ -35,12 +35,16 @@ spec:
             sonarr: ["http://sonarr.default.svc.cluster.local/?apikey={{ .SONARR_API_KEY }}"],
             torrentDir: "/qbittorrent/qBittorrent/BT_backup",
             torznab: [
-               1, // PHD
-               2, // AvistaZ
-               3, // ExoticaZ
-               4, // MAM
-               5, // HappyFappy
-               10, // AnimeZ
+              1, // PrivateHD
+              2, // AvistaZ
+              3, // ExoticaZ
+              4, // MyAnonamouse
+              5, // HappyFappy
+              10, // AnimeZ
+              13, // Orpheus
+              14, // Hawke One
+              15, // DigitalCore
+              16, // Milkie
             ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
           };
   dataFrom:
