--- a/k8s/apps/default/cross-seed/app/externalsecret.yaml
+++ b/k8s/apps/default/cross-seed/app/externalsecret.yaml
@@ -45,6 +45,8 @@ spec:
               14, // Hawke One
               15, // DigitalCore
               16, // Milkie
+              17, // PuTorrents
+              18, // TorrentLeech
             ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
           };
   dataFrom:
