--- a/k8s/apps/default/cross-seed/app/helmrelease.yaml
+++ b/k8s/apps/default/cross-seed/app/helmrelease.yaml
@@ -69,6 +69,7 @@ spec:
     persistence:
       config:
         type: emptyDir
+        sizeLimit: 1Gi
       secret-file:
         type: secret
         name: cross-seed-secret
