--- a/k8s/apps/default/prowlarr/app/helmrelease.yaml
+++ b/k8s/apps/default/prowlarr/app/helmrelease.yaml
@@ -101,5 +101,7 @@ spec:
     persistence:
       config:
         type: emptyDir
+        sizeLimit: 100Mi
       tmp:
         type: emptyDir
+        sizeLimit: 1Gi
