--- a/k8s/apps/default/recyclarr/app/helmrelease.yaml
+++ b/k8s/apps/default/recyclarr/app/helmrelease.yaml
@@ -77,5 +77,6 @@ spec:
             readOnly: true
       config-logs:
         type: emptyDir
+        sizeLimit: 100Mi
         globalMounts:
           - path: /config/logs
