--- a/k8s/apps/default/stash/app/helmrelease.yaml
+++ b/k8s/apps/default/stash/app/helmrelease.yaml
@@ -65,6 +65,7 @@ spec:
         existingClaim: stash
       tmp:
         type: emptyDir
+        sizeLimit: 1Gi
       media:
         type: nfs
         server: nas.internal
