--- a/k8s/apps/default/unpackerr/app/helmrelease.yaml
+++ b/k8s/apps/default/unpackerr/app/helmrelease.yaml
@@ -84,6 +84,7 @@ spec:
     persistence:
       logs:
         type: emptyDir
+        sizeLimit: 1Gi
       media:
         type: nfs
         server: nas.internal
