--- a/k8s/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
+++ b/k8s/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
@@ -124,5 +124,6 @@ spec:
     persistence:
       config:
         type: emptyDir
+        sizeLimit: 1Gi
         globalMounts:
           - path: *configDir
