--- a/k8s/apps/observability/gatus/app/helmrelease.yaml
+++ b/k8s/apps/observability/gatus/app/helmrelease.yaml
@@ -125,6 +125,7 @@ spec:
     persistence:
       config:
         type: emptyDir
+        sizeLimit: 1Gi
       config-file:
         type: configMap
         name: gatus-configmap
