--- a/k8s/apps/observability/speedtest-exporter/app/helmrelease.yaml
+++ b/k8s/apps/observability/speedtest-exporter/app/helmrelease.yaml
@@ -54,6 +54,7 @@ spec:
     persistence:
       config:
         type: emptyDir
+        sizeLimit: 1Gi
         globalMounts:
           - path: /.config
     service:
