--- a/k8s/apps/default/home-assistant/app/helmrelease.yaml
+++ b/k8s/apps/default/home-assistant/app/helmrelease.yaml
@@ -108,13 +108,16 @@ spec:
           - path: /config
       logs:
         type: emptyDir
+        sizeLimit: 100Mi
         globalMounts:
           - path: /config/logs
       tts:
         type: emptyDir
+        sizeLimit: 1Gi
         globalMounts:
           - path: /config/tts
       tmp:
         type: emptyDir
+        sizeLimit: 1Gi
         globalMounts:
           - path: /tmp
