--- a/k8s/apps/default/slskd/app/helmrelease.yaml
+++ b/k8s/apps/default/slskd/app/helmrelease.yaml
@@ -123,6 +123,7 @@ spec:
             readOnly: true
       tmp:
         type: emptyDir
+        sizeLimit: 1Gi
       media:
         type: nfs
         server: nas.internal
