feat: add dashbrr to ks

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -24,6 +24,7 @@ resources:
   - ./plex/ks.yaml
   - ./tautulli/ks.yaml
   - ./overseerr/ks.yaml
+  - ./dashbrr/ks.yaml
   - ./wizarr/ks.yaml
   - ./maintainerr/ks.yaml
   - ./filebrowser/ks.yaml
