--- a/k8s/apps/default/dashbrr/app/helmrelease.yaml
+++ b/k8s/apps/default/dashbrr/app/helmrelease.yaml
@@ -26,14 +26,6 @@ spec:
       dashbrr:
         annotations:
           reloader.stakater.com/auto: "true"
-        initContainers:
-          init-db:
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16
-            envFrom: &envFrom
-              - secretRef:
-                  name: dashbrr-secret
         containers:
           app:
             image:
@@ -46,7 +38,9 @@ spec:
               DASHBRR__LISTEN_ADDR: 0.0.0.0:8080
               GIN_MODE: debug
               TZ: Australia/Sydney
-            envFrom: *envFrom
+            envFrom:
+              - secretRef:
+                  name: dashbrr-secret
             probes:
               liveness: &probes
                 enabled: true
