chore: maybe it does need it, not sure

--- a/k8s/apps/default/dashbrr/app/helmrelease.yaml
+++ b/k8s/apps/default/dashbrr/app/helmrelease.yaml
@@ -26,6 +26,14 @@ spec:
       dashbrr:
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          init-db:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16
+            envFrom: &envFrom
+              - secretRef:
+                  name: dashbrr-secret
         containers:
           app:
             image:
@@ -38,9 +46,7 @@ spec:
               DASHBRR__LISTEN_ADDR: 0.0.0.0:8080
               GIN_MODE: debug
               TZ: Australia/Sydney
-            envFrom:
-              - secretRef:
-                  name: dashbrr-secret
+            envFrom: *envFrom
             probes:
               liveness: &probes
                 enabled: true
