fix: keep init for now

--- a/k8s/apps/default/dashbrr/app/externalsecret.yaml
+++ b/k8s/apps/default/dashbrr/app/externalsecret.yaml
@@ -31,6 +31,11 @@ spec:
         DASHBRR__DB_PORT: "5432"
         DASHBRR__DB_USER: &dbUser "{{ .DASHBRR_POSTGRES_USER }}"
         DASHBRR__DB_PASSWORD: &dbPass "{{ .DASHBRR_POSTGRES_PASS }}"
+        INIT_POSTGRES_DBNAME: *dbName
+        INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_USER: *dbUser
+        INIT_POSTGRES_PASS: *dbPass
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: radarr
