fix: update slskd metrics path

--- a/k8s/apps/default/slskd/app/helmrelease.yaml
+++ b/k8s/apps/default/slskd/app/helmrelease.yaml
@@ -96,7 +96,7 @@ spec:
         endpoints:
           - port: http
             scheme: http
-            path: /metrics
+            path: /api/v0/metrics
             interval: 1m
             scrapeTimeout: 10s
     ingress:
