--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -14,12 +14,14 @@ resources:
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
   - ./readarr/ks.yaml
+  - ./readarr-ab/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./slskd/ks.yaml
   - ./recyclarr/ks.yaml
   - ./bazarr/ks.yaml
   - ./cross-seed/ks.yaml
   - ./komga/ks.yaml
+  - ./audiobookshelf/ks.yaml
   - ./stash/ks.yaml
   - ./plex/ks.yaml
   - ./tautulli/ks.yaml
