--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
         className: internal
         hosts:
-          - host: "{{ Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
             paths:
               - path: /
                 service:
