feat(autobrr): add custom definition and config for myanonamouse
* Needed to download freeleech that is not VIP

--- a/k8s/apps/default/autobrr/app/kustomization.yaml
+++ b/k8s/apps/default/autobrr/app/kustomization.yaml
@@ -12,5 +12,9 @@ configMapGenerator:
     options:
       labels:
         loki_rule: "true"
+  - name: autobrr-configmap
+    files:
+      - config.toml=./resources/config.toml
+      - myanonamouse.yaml=./resources/defintions/myanonamouse.yaml
 generatorOptions:
   disableNameSuffixHash: true
