--- a/k8s/apps/default/actual/ks.yaml
+++ b/k8s/apps/default/actual/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: &app actual
   namespace: flux-system
 spec:
-  targetNamespace: self-hosted
+  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
