--- a/k8s/apps/default/actual/app/helmrelease.yaml
+++ b/k8s/apps/default/actual/app/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
         className: internal
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
