feat(lazylibrarian): add cache pvc

--- a/k8s/apps/default/lazylibrarian/app/helmrelease.yaml
+++ b/k8s/apps/default/lazylibrarian/app/helmrelease.yaml
@@ -90,6 +90,10 @@ spec:
     persistence:
       config:
         existingClaim: lazylibrarian
+      cache:
+        existingClaim: lazylibrarian-cache
+        globalMounts:
+          - path: /config/cache
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
