feat: add deemix

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - ./lazylibrarian/ks.yaml
   - ./readarr/ks.yaml
   - ./readarr-ab/ks.yaml
+  - ./deemix/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./slskd/ks.yaml
   - ./recyclarr/ks.yaml
