--- a/k8s/apps/default/jellyseerr/app/pvc.yaml
+++ b/k8s/apps/default/jellyseerr/app/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: overseerr-cache
+  name: jellyseerr-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
