--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -27,7 +27,7 @@ resources:
   - ./stash/ks.yaml
   - ./plex/ks.yaml
   - ./tautulli/ks.yaml
-  - ./overseerr/ks.yaml
+  - ./jellyseerr/ks.yaml
   - ./wizarr/ks.yaml
   - ./maintainerr/ks.yaml
   - ./filebrowser/ks.yaml
