feat(jellyseerr): add emptyDir size limits

--- a/k8s/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyseerr/app/helmrelease.yaml
@@ -97,5 +97,7 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /app/config/logs
+        sizeLimit: 1Gi
       tmp:
         type: emptyDir
+        sizeLimit: 1Gi
