fix(jellyseerr): temporarily change this so external-dns can cleanup

--- a/k8s/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyseerr/app/helmrelease.yaml
@@ -78,7 +78,7 @@ spec:
       app:
         className: external
         hosts:
-          - host: requests.${SECRET_HOME_DOMAIN}
+          - host: jellyseerr.${SECRET_HOME_DOMAIN}
             paths:
               - path: /
                 service:
