fix: use helm value for events

--- a/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -39,13 +39,13 @@ spec:
             key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
-      - --events
       - --ingress-class=external
       - --cloudflare-proxied
       - --ignore-ingress-tls-spec
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
     policy: sync
+    triggerLoopOnEvent: true
     sources: ["crd", "ingress"]
     txtPrefix: k8s.
     txtOwnerId: default
