fix: apply same events to pihole

--- a/k8s/apps/network/external-dns/pihole/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/pihole/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
       - --ingress-class=internal
       - --ignore-ingress-tls-spec
       - --pihole-tls-skip-verify
+    triggerLoopOnEvent: true
     policy: sync
     sources: ["service", "ingress"]
     domainFilters: ["${SECRET_HOME_DOMAIN}"]
