--- a/k8s/apps/default/qbittorrent/tools/resources/config.yaml
+++ b/k8s/apps/default/qbittorrent/tools/resources/config.yaml
@@ -43,3 +43,7 @@ trackers:
     urls: ["torrentleech.org", "tleechreload.org"]
     required_seed_ratio: 1
     required_seed_days: 14
+  - name: seedpool.org
+    urls: ["seedpool.org"]
+    required_seed_ratio: 1
+    required_seed_days: 14
