--- a/k8s/apps/network/nginx/external/helmrelease.yaml
+++ b/k8s/apps/network/nginx/external/helmrelease.yaml
@@ -19,11 +19,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
-  valuesFrom:
-    - targetPath: controller.maxmindLicenseKey
-      kind: Secret
-      name: nginx-external-maxmind-secret
-      valuesKey: MAXMIND_LICENSE_KEY
   dependsOn:
     - name: cloudflared
       namespace: network
@@ -32,7 +27,7 @@ spec:
     controller:
       service:
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/hostname: &hostname "external.${SECRET_HOME_DOMAIN}"
           lbipam.cilium.io/ips: "192.168.68.203"
         externalTrafficPolicy: Cluster
       ingressClassResource:
@@ -46,7 +41,7 @@ spec:
               operator: In
               values: ["external"]
       config:
-        block-user-agents: "GPTBot,~*GPTBot*,ChatGPT-User,~*ChatGPT-User*,Google-Extended,~*Google-Extended*,CCBot,~*CCBot*,Omgilibot,~*Omgilibot*,FacebookBot,~*FacebookBot*" # taken from https://github.com/superseriousbusiness/gotosocial/blob/main/internal/web/robots.go
+        block-user-agents: "AdsBot-Google,Amazonbot,anthropic-ai,Applebot-Extended,Bytespider,CCBot,ChatGPT-User,ClaudeBot,Claude-Web,cohere-ai,Diffbot,FacebookBot,FriendlyCrawler,Google-Extended,GoogleOther,GPTBot,img2dataset,omgili,omgilibot,peer39_crawler,peer39_crawler/1.0,PerplexityBot,YouBot," # taken from https://github.com/ai-robots-txt/ai.robots.txt
         client-body-buffer-size: 100M
         client-body-timeout: 120
         client-header-timeout: 120
@@ -75,6 +70,7 @@ spec:
             any: true
       extraArgs:
         default-ssl-certificate: "network/${SECRET_HOME_DOMAIN/./-}-tls"
+        publish-status-address: *hostname
       terminationGracePeriodSeconds: 120
       resources:
         requests:
