--- a/k8s/apps/default/qbittorrent/tools/resources/config.yaml
+++ b/k8s/apps/default/qbittorrent/tools/resources/config.yaml
@@ -47,3 +47,15 @@ trackers:
     urls: ["seedpool.org"]
     required_seed_ratio: 1
     required_seed_days: 14
+  - name: sportscult.org
+    urls: ["sportscult.org"]
+    required_seed_ratio: 1
+    required_seed_days: 14
+  - name: lst.gg
+    urls: ["lst.gg"]
+    required_seed_ratio: 1
+    required_seed_days: 14
+  - name: oldtoons.world
+    urls: ["oldtoons.world"]
+    required_seed_ratio: 1
+    required_seed_days: 14
