--- a/k8s/apps/default/wizarr/ks.yaml
+++ b/k8s/apps/default/wizarr/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: plex
-    - name: overseerr
+    - name: jellyseerr
     - name: volsync
   path: ./k8s/apps/default/wizarr/app
   prune: true
