--- a/k8s/apps/default/actual/app/helmrelease.yaml
+++ b/k8s/apps/default/actual/app/helmrelease.yaml
@@ -62,8 +62,9 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: 568
-        runAsGroup: 568
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
         seccompProfile: {type: RuntimeDefault}
     service:
       app:
