feat: disable readarr while metadata server is broken

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -12,8 +12,8 @@ resources:
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
   - ./lazylibrarian/ks.yaml
-  - ./readarr/ks.yaml
-  - ./readarr-ab/ks.yaml
+  # - ./readarr/ks.yaml
+  # - ./readarr-ab/ks.yaml
   - ./deemix/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./slskd/ks.yaml
@@ -33,3 +33,4 @@ resources:
   - ./emailer/ks.yaml
   - ./thelounge/ks.yaml
   - ./actual/ks.yaml
+  - ./shiori/ks.yaml
