fix: go2rtc config maybe

--- a/k8s/apps/default/go2rtc/app/resources/go2rtc.yaml
+++ b/k8s/apps/default/go2rtc/app/resources/go2rtc.yaml
@@ -1,5 +1,4 @@
 hass:
   config: "/config"
 streams:
-  dining_room_camera:
-    - hass: hass:camera.dining_room_camera
+  dining_room_camera: hass:camera.dining_room_camera
