--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -7,10 +7,10 @@ resources:
   # Flux-Kustomizations
   - ./home-assistant/ks.yaml
   - ./emqx/ks.yaml
-  - ./go2rtc/ks.yaml
-  - ./rtlamr2mqtt/ks.yaml
-  - ./zigbee/ks.yaml
-  - ./zwave/ks.yaml
+  # - ./go2rtc/ks.yaml
+  # - ./rtlamr2mqtt/ks.yaml
+  # - ./zigbee/ks.yaml
+  # - ./zwave/ks.yaml
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
   - ./autobrr/ks.yaml
