--- a/k8s/apps/default/shiori/app/helmrelease.yaml
+++ b/k8s/apps/default/shiori/app/helmrelease.yaml
@@ -35,6 +35,7 @@ spec:
               repository: ghcr.io/go-shiori/shiori
               tag: v1.7.2@sha256:b7eb94ee5ccf24716b4d502961aa9d8b9e9f6d2014cb6553739c25f6d3f29116
             env:
+              HTTP_ROOT_PATH: /
               SHIORI_HTTP_PORT: &port 80
               SHIORI_DIR: /config
             probes:
