feat(shiori): add postgres
sqlite doesn't work

--- a/k8s/apps/default/shiori/app/helmrelease.yaml
+++ b/k8s/apps/default/shiori/app/helmrelease.yaml
@@ -29,6 +29,14 @@ spec:
       shiori:
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          init-db:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16.6@sha256:c1d3a845d47fe1aeebd110fefb5f43f54c4735aec1d2b0c01de8d4d5e8cdd6a4
+            envFrom: &envFrom
+              - secretRef:
+                  name: shiori-secret
         containers:
           app:
             image:
@@ -38,6 +46,7 @@ spec:
               HTTP_ROOT_PATH: /
               SHIORI_HTTP_PORT: &port 80
               SHIORI_DIR: /config
+            envFrom: *envFrom
             probes:
               liveness: &probes
                 enabled: true
