fix: copypasta to wrong file

--- a/k8s/apps/database/pgadmin/app/kustomization.yaml
+++ b/k8s/apps/database/pgadmin/app/kustomization.yaml
@@ -1,94 +1,8 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
-metadata:
-  name: &app pgadmin
-spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: app-template
-      version: 3.6.0
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
-  install:
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      strategy: rollback
-      retries: 3
-  values:
-    controllers:
-      pgadmin:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: dpage/pgadmin4
-              tag: 8.14@sha256:2fbd14f87cfc030917cc3602acea551e2b2d7167501ac54f09af17b19c094645
-            env:
-              PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION: "False"
-              PGADMIN_DISABLE_POSTFIX: "true"
-              PGADMIN_LISTEN_PORT: &port 80
-            envFrom:
-              - secretRef:
-                  name: pgadmin-secret
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /misc/ping
-                    port: *port
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
-            resources:
-              requests:
-                cpu: 10m
-              limits:
-                memory: 500Mi
-    defaultPodOptions:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        fsGroupChangePolicy: OnRootMismatch
-    service:
-      app:
-        controller: *app
-        ports:
-          http:
-            port: *port
-    ingress:
-      app:
-        enabled: true
-        className: internal
-        annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
-        hosts:
-          - host: "{{ .Release.Name }}.${SECRET_INTERNAL_DOMAIN}"
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
-    persistence:
-      config:
-        existingClaim: *app
-        globalMounts:
-          - path: /var/lib/pgadmin
-      server-json:
-        type: configMap
-        name: pgadmin-configmap
-        globalMounts:
-          - path: /pgadmin4/servers.json
-            subPath: servers.json
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
+  - ../../../../templates/gatus/guarded
+  - ../../../../templates/volsync
