feat(cross-seed): update config

--- a/k8s/apps/default/cross-seed/app/externalsecret.yaml
+++ b/k8s/apps/default/cross-seed/app/externalsecret.yaml
@@ -45,8 +45,11 @@ spec:
               14, // Hawke One
               15, // DigitalCore
               16, // Milkie
-              17, // PuTorrents
               18, // TorrentLeech
+              19, // seedpool
+              20, // SportsCult
+              21, // LST
+              22, // Oldtoons
             ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
           };
   dataFrom:
