feat: read only config

--- a/k8s/apps/database/pgadmin/app/helmrelease.yaml
+++ b/k8s/apps/database/pgadmin/app/helmrelease.yaml
@@ -92,3 +92,4 @@ spec:
         globalMounts:
           - path: /pgadmin4/servers.json
             subPath: servers.json
+            readOnly: true
