--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
   values:
     csi:
       enableVolumeGroupSnapshot: false # TODO: enable this when v1beta1 CRDs are available
-      # cephFSKernelMountOptions: ms_mode=prefer-crc
+      cephFSKernelMountOptions: ms_mode=prefer-crc
       enableLiveness: true
       serviceMonitor:
         enabled: true
