feat: yolo expose domains

--- a/k8s/bootstrap/bootstrap.env
+++ b/k8s/bootstrap/bootstrap.env
@@ -2,7 +2,5 @@ FLUX_SOPS_PRIVATE_KEY=op://$VAULT/sops/SOPS_PRIVATE_KEY
 FLUX_GITHUB_DEPLOY_KEY=op://$VAULT/flux/FLUX_GITHUB_DEPLOY_KEY
 ONEPASSWORD_CREDENTIALS=op://$VAULT/1password/OP_CREDENTIALS_JSON
 ONEPASSWORD_CONNECT_TOKEN=op://$VAULT/1password/OP_CONNECT_TOKEN
-SECRET_HOME_DOMAIN=op://$VAULT/domains/SECRET_HOME_DOMAIN
-SECRET_DEV_DOMAIN=op://$VAULT/domains/SECRET_DEV_DOMAIN
-INGRESS_NGINX_TLS_CRT=op://$VAULT/${SECRET_HOME_DOMAIN//./-}/tls.crt
-INGRESS_NGINX_TLS_KEY=op://$VAULT/${SECRET_HOME_DOMAIN//./-}/tls.key
+INGRESS_NGINX_TLS_CRT=op://$VAULT/goyangi-cloud-tls/tls.crt
+INGRESS_NGINX_TLS_KEY=op://$VAULT/goyangi-cloud-tls/tls.key
